tests/negative_fixtures/invalid_variable_type.shx
// Should fail - type mismatches 
let count: number = "not a number";
let flag: boolean = 42;
let name: string = true;
